feat: 添加爬虫服务器和相关 API 文档

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
+    "server": "node server.js",
+    "mock": "node mock-send-kafka.js",
     "test": "node test.js"
   },
   "dependencies": {
